--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "lexilearn",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.395.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "recharts": "^3.0.2",
+    "web-vitals": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -17,20 +19,15 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
     "postcss": "^8.4.38",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint ."
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
