--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
+    "axios": "^1.10.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.395.0",
     "react": "^18.3.1",
