--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "axios": "^1.10.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.395.0",
+    "multer": "^2.0.1",
+    "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
